Added more galleries

--- a/gallery.html
+++ b/gallery.html
@@ -34,70 +34,70 @@
 			<div class="gallery-bottom">
 				<div class="gallery-1">
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/r4.jpg" data-lightbox="example-set"
+						<a class="example-image-link" href="images/gl1.png" data-lightbox="example-set"
 							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/r4.jpg" alt="" /></a>
+								src="images/gl1.png" alt="" /></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/gl7.jpg" data-lightbox="example-set"
+						<a class="example-image-link" href="images/gl2.png" data-lightbox="example-set"
 							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/gl7.jpg" alt="" /></a>
+								src="images/gl2.png" alt="" /></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/gl4.jpg" data-lightbox="example-set"
+						<a class="example-image-link" href="images/gl3.png" data-lightbox="example-set"
 							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/gl4.jpg" alt="" /></a>
+								src="images/gl3.png" alt="" /></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/gl5.jpg" data-lightbox="example-set"
+						<a class="example-image-link" href="images/gl4.png" data-lightbox="example-set"
 							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/gl5.jpg" alt="" /></a>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="gallery-1">
-					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/gl6.jpg" data-lightbox="example-set"
-							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/gl6.jpg" alt="" /></a>
-					</div>
-					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/gl2.jpg" data-lightbox="example-set"
-							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/gl2.jpg" alt="" /></a>
-					</div>
-					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/r6.jpg" data-lightbox="example-set"
-							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/r6.jpg" alt="" /></a>
-					</div>
-					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/gl7.jpg" data-lightbox="example-set"
-							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/gl7.jpg" alt="" /></a>
+								src="images/gl4.png" alt="" /></a>
 					</div>
 					<div class="clearfix"></div>
 				</div>
 				<div class="gallery-1">
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/gl4.jpg" data-lightbox="example-set"
+						<a class="example-image-link" href="images/gl5.png" data-lightbox="example-set"
 							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/gl4.jpg" alt="" /></a>
+								src="images/gl5.png" alt="" /></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/r3.jpg" data-lightbox="example-set"
+						<a class="example-image-link" href="images/gl6.png" data-lightbox="example-set"
 							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/r3.jpg" alt="" /></a>
+								src="images/gl6.png" alt="" /></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/r4.jpg" data-lightbox="example-set"
+						<a class="example-image-link" href="images/gl7.png" data-lightbox="example-set"
 							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/r4.jpg" alt="" /></a>
+								src="images/gl7.png" alt="" /></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/gl11.jpg" data-lightbox="example-set"
+						<a class="example-image-link" href="images/gl8.png" data-lightbox="example-set"
 							data-title="Click the right half of the image to move forward."><img class="example-image"
-								src="images/gl11.jpg" alt="" /></a>
+								src="images/gl8.png" alt="" /></a>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="gallery-1">
+					<div class="col-md-3 gallery-grid">
+						<a class="example-image-link" href="images/gl9.png" data-lightbox="example-set"
+							data-title="Click the right half of the image to move forward."><img class="example-image"
+								src="images/gl9.png" alt="" /></a>
+					</div>
+					<div class="col-md-3 gallery-grid">
+						<a class="example-image-link" href="images/gl10.png" data-lightbox="example-set"
+							data-title="Click the right half of the image to move forward."><img class="example-image"
+								src="images/gl10.png" alt="" /></a>
+					</div>
+					<div class="col-md-3 gallery-grid">
+						<a class="example-image-link" href="images/gl11.png" data-lightbox="example-set"
+							data-title="Click the right half of the image to move forward."><img class="example-image"
+								src="images/gl11.png" alt="" /></a>
+					</div>
+					<div class="col-md-3 gallery-grid">
+						<a class="example-image-link" href="images/gl12.png" data-lightbox="example-set"
+							data-title="Click the right half of the image to move forward."><img class="example-image"
+								src="images/gl12.png" alt="" /></a>
 					</div>
 					<div class="clearfix"></div>
 				</div>
