--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                 </div>
 
-                <div class="slid banner3">
+                <div class="slid banner4">
                     <div class="caption">
                         <h3><a href="https://bivr.io">BIVR-&alpha;</a>Virtual Community - For Islanders</h3>
                         <p>We are building a META and Virtual space islanders can visit, connect
@@ -88,12 +88,20 @@
                     </div>
                 </div>
 
-                <div class="slid banner3">
+                <div class="slid banner5">
                     <div class="caption">
                         <h3>GET ACCESS <br>Purchase &alpha;-shell Token</h3>
                         <p>A token gives you complete access to this new world of virtual reality.
                         </p>
                         <a class="btn btn-info btn-lg" href="#explore">EXPLORE</a>
+                    </div>
+                </div>
+                <div class="slid banner6">
+                    <div class="caption">
+                        <!-- <h3>GET ACCESS <br>Purchase &alpha;-shell Token</h3>
+                        <p>A token gives you complete access to this new world of virtual reality.
+                        </p>
+                        <a class="btn btn-info btn-lg" href="#explore">EXPLORE</a> -->
                     </div>
                 </div>
 
