--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
 <!doctype html>
 <html lang="en">
 
@@ -10,7 +6,7 @@ Author URL: http://w3layouts.com
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Masterwork a Corporate Category Bootstrap Responsive Website Template - Home :: W3Layouts</title>
+  <title>BIVR - Boat Island</title>
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -21,16 +17,19 @@ Author URL: http://w3layouts.com
 
 <body>
 <!--header-->
+<div class="bnr">
+
 <header id="site-header" class="fixed-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg stroke">
-            <a class="navbar-brand" href="index.html">
+            <!-- <a class="navbar-brand" href="index.html">
                 <span class="fa fa-handshake-o"></span> Masterwork
-            </a>
-            <!-- if logo is image enable this   
-      <a class="navbar-brand" href="#index.html">
-          <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-      </a> -->
+            </a> -->
+           
+      <a class="navbar-brand" href="index.html">
+          <img src="assets/images/logo.png" alt="Your logo" title="bivr logo" style="height:35px;" />
+          <img src="assets/images/logo-txt.png" alt="Your logo" title="bivr logo" style="height:35px;" />
+      </a>
             <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
@@ -47,13 +46,13 @@ Author URL: http://w3layouts.com
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item @@services-active">
-                        <a class="nav-link" href="services.html">Services</a>
+                        <a class="nav-link" href="services.html">Events</a>
                     </li>
                     <li class="nav-item @@contact-active">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-                        <a class="btn btn-outline-primary theme-button" href="contact.html">Schedule a Demo</a>
+                        <a class="btn btn-outline-primary theme-button" href="contact.html">Purchase a Ticket</a>
                     </li>
                 </ul>
             </div>
@@ -67,11 +66,12 @@ Author URL: http://w3layouts.com
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 content-left">
-          <h3>We Execute Our Ideas 
-            From Start to Finish 
+          <h3>WELCOME TO
           </h3>
-          <p class="mt-3 mb-lg-5 mb-4">Building a beautiful interactive business for startups and innovative companies.</p>
-          <a href="about.html" class="btn btn-outline-primary theme-button">Get Started</a>
+          <h3 style="color: #ab07d4">BOAT ISLAND VR</h3>
+          <p class="mt-3 mb-lg-5 mb-4">A Multiplayer Virtual Reality (VR) <br>Sandbox.</p>
+          <a href="about.html" class="btn btn-outline-primary theme-button text-capitalize" style="border-radius: 40px; 
+          color: #fff; background: #ab07d4; border: none;">Get Started</a>
         </div>
         <div class="col-lg-6 content-photo mt-lg-0 mt-5">
           <img src="assets/images/main.png" class="img-fluid" alt="main image">
@@ -82,6 +82,7 @@ Author URL: http://w3layouts.com
   </div>
 </div>
 <!-- //index-block1 -->
+</div>
 <!-- index-block2 -->
 <section class="w3l-index2 py-5">
   <div class="container py-md-3">
