Updated landing page section content

--- a/index.html
+++ b/index.html
@@ -87,19 +87,17 @@
 <section class="w3l-index2 py-5">
   <div class="container py-md-3">
     <div class="header-section text-center mx-auto">
-      <h6 class="sub-title">Why Choose Us</h6>
-      <h3>Tools for business startup to professional </h3>
-      <p class="my-3"> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-        Nulla mollis dapibus nunc, ut rhoncus
-        turpis sodales quis. Integer sit amet mattis quam.</p>
+      <h6 class="sub-title text-capitalize">Join the Wave</h6>
+        <img src="assets/images/gl12.jpg" class="img-fluid" alt="">
+      <p class="my-3"> Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer virtual reality platform for creators. 
+        We are building a meta and virtual space where islanders(fans) can visit, connect with eachother and enjoy exclusive content and entertainment from different boats (creators) around the world. 
+        Our platform is free for our boat island members, others can connect by purchasing a token for access. </p>
     </div>
     <div class="row bottom_grids text-center">
       <div class="col-lg-4 col-md-6 mt-5">
         <div class="s-block">
           <a href="services.html" class="d-block">
             <img src="assets/images/s1.png" alt="" class="img-fluid" />
-            <h3 class="my-3">Interactive</h3>
-            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium tempora rerum perspiciatis?</p>
           </a>
         </div>
       </div>
@@ -107,8 +105,6 @@
         <div class="s-block">
           <a href="services.html" class="d-block">
             <img src="assets/images/s2.png" alt="" class="img-fluid" />
-            <h3 class="my-3">Business</h3>
-            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium tempora rerum perspiciatis?</p>
           </a>
         </div>
       </div>
@@ -116,8 +112,6 @@
         <div class="s-block">
           <a href="services.html" class="d-block">
             <img src="assets/images/s3.png" alt="" class="img-fluid" />
-            <h3 class="my-3">Inspiration</h3>
-            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium tempora rerum perspiciatis?</p>
           </a>
         </div>
       </div>
@@ -126,65 +120,8 @@
 </section>
 <!-- /index-block2 -->
 <section class="w3l-index3 py-5">
-  <div class="container py-lg-3 mt-3">
-    <div class="row align-items-center">
-      <div class="col-lg-6 book-info pr-lg-5">
-        <h6 class="sub-title">About Our Company</h6>
-        <h3 class="mb-md-4 mb-3">The Best Choice For Your Successful Business!</h3>
-        <p class="mb-md-5 mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et est repellendus illum harum quam nihil totam
-          reprehenderit! Ut sed eveniet quos! Asperiores officia, repudiandae similique reiciendis, ab est magnam esse nesciunt ea fuga facere
-          voluptatem.</p>
-        <a href="#URL" class="btn btn-primary theme-button">Read More</a>
-      </div>
-      <div class="col-lg-6 pl-lg-5 mt-lg-0 mt-5">
-        <img src="assets/images/about.jpg" class="img-fluid shadow img-curve" alt="" />
-      </div>
-    </div>
-  </div>
-</section>
-<!-- stats -->
-<section class="w3l-stats pb-5 pt-4" id="stats">
-  <div class="gallery-inner container pb-lg-3">
-    <div class="row stats-con text-white">
-      <div class="col-lg-4 col-sm-6">
-        <div class="stats_info counter_grid">
-          <h4>Happy Customers</h4>
-          <p class="counter">10458</p>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 mt-sm-0 mt-4">
-        <div class="stats_info counter_grid1">
-          <h4>Winning Awards</h4>
-          <p class="counter">890</p>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 mt-lg-0 mt-sm-5 mt-4">
-        <div class="stats_info counter_grid">
-          <h4>Completed Projects</h4>
-          <p class="counter">5345</p>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- //stats -->
-<section class="w3l-index4">
-  <div class="new-block top-bottom">
-    <div class="container">
-      <div class="middle-section">
-        <div class="section-width">
-          <h2>We are true to ourselves, and commit to always perform at our best.</h2>
-        </div>
-        <div class="link-list-menu">
-          <p class="mt-md-4 mt-3 mb-md-5 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, doloribus atque. Corrupti exercitationem voluptatem ipsum iste consequuntur et vitae voluptas temporibus? Maxime dolores amet voluptatum illo consequatur placeat fugit ducimus.</p>
-            <a href="about.html" class="btn btn-light theme-button">Read more</a>
-        </div>
-      </div>
-    </div>
-  </div>
+  <iframe class="container py-lg-3 mt-3">
+  </iframe>
 </section>
 <!-- News Section -->
 <section class="w3l-index5" id="news">
