Finished About Page

--- a/index.html
+++ b/index.html
@@ -158,34 +158,23 @@
           <div class="row">
             <div class="col-lg-6 column">
               <div class="row">
-                <div class="col-md-4 column">
-                  <h3>Company</h3>
+                <div class="col-md-6 column">
+                  <h3>Quick Links</h3>
                   <ul class="footer-gd-16">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="#blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="services.html">Events</a></li>
+                    <li><a href="#url">Support</a></li>
+                    <li><a href="#url">Purchase Token</a></li>
                   </ul>
                 </div>
-                <div class="col-md-4 column mt-md-0 mt-4">
-                  <h3>Useful Links</h3>
+                <div class="col-md-6 column mt-md-0 mt-4">
+                  <h3>Legal Information</h3>
                   <ul class="footer-gd-16">
-                    <li><a href="#url">Case Studies</a></li>
-                    <li><a href="#url">Our Branches</a></li>
-                    <li><a href="#url">Latest Media</a></li>
-                    <li><a href="about.html">About Company</a></li>
-                    <li><a href="#url">Our People</a></li>
-                  </ul>
-                </div>
-                <div class="col-md-4 column mt-md-0 mt-4">
-                  <h3>Our Services</h3>
-                  <ul class="footer-gd-16">
+                    <li><a href="#url">Terms & Conditions</a></li>
                     <li><a href="#url">Privacy Policy</a></li>
-                    <li><a href="#url">Our Terms</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="#landing-single.html">Landing Page</a></li>
-                    <li><a href="#url">Our People</a></li>
+                    <li><a href="#url">License Agreement</a></li>
+                    <li><a href="#url">Other Products</a></li>
                   </ul>
                 </div>
               </div>
