Updated video player on Landing Page

--- a/index.html
+++ b/index.html
@@ -123,13 +123,32 @@
       </div>
     </div>
   </section>
-  <!-- /index-block2 -->
-  <section class="w3l-index3 py-5">
-    <iframe class="container py-lg-3 mt-3" width="560" height="450" src="https://www.youtube.com/embed/yRh7N-CluiM"
-      title="YouTube video player" frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
-  </section>
+  <!-- /index-block2 -->    <section class="w3l-about4" id="about">
+      <div class="new-block py-5">
+        <div class="container py-lg-5">
+          <div class="middle-section text-center">
+            <div class="header-section text-center mx-auto">
+              <h6 class="sub-title">Explore The Boat Island</h6>
+              <h3>Take a Tour Round the Island</h3>
+            </div>
+            <div class="history-info mt-5">
+              <div class="position-relative">
+                <img src="assets/images/bg.jpg" class="img-fluid img-curve video-popup-image" alt="video-popup">
+               
+                <a href="#small-dialog" class="popup-with-zoom-anim play-view text-center position-absolute">
+                  <span class="video-play-icon">
+                    <span class="fa fa-play"></span>
+                  </span>
+                </a>
+                <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+                  <iframe src="https://www.youtube.com/embed/yRh7N-CluiM" allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   <section class="w3l-index4">
     <div class="new-block top-bottom">
       <div class="container">
