Added Popover and Carosel

--- a/about.html
+++ b/about.html
@@ -141,10 +141,6 @@
             </div>
             <div class="mt-5 request-quote">
               <!-- request a demo form popup -->
-              <!-- <button type="button" class="btn btn-primary theme-button" data-toggle="modal"
-                data-target="#exampleModalCenter">
-                Request a quote
-              </button> -->
               <a type="button" class="btn btn-primary theme-button">
                 Purchase Ticket
               </a>
@@ -154,40 +150,10 @@
                 aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                   <div class="modal-content">
-                    <div class="modal-header px-4">
-                      <h5 class="modal-title request-demo-title" id="exampleModalCenterTitle">Get Free Quote</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body demo-request p-4">
-                      <form action="/" method="GET">
-                        <div class="form-group">
-                          <!-- <label for="NameInput">Name:</label> -->
-                          <input type="text" class="form-control" name="name" placeholder="Name" required>
-                        </div>
-                        <div class="form-group">
-                          <!-- <label for="exampleInputEmail1">Email address:</label> -->
-                          <input type="email" class="form-control" name="emailid" placeholder="Email" required>
-                        </div>
-                        <div class="form-group">
-                          <!-- <label for="CompanyInput">Company:</label> -->
-                          <input type="text" class="form-control" name="company" placeholder="Company" required>
-                        </div>
-                        <div class="form-group">
-                          <!-- <label for="CompanyInput">Designation:</label> -->
-                          <input type="text" class="form-control" name="subject" placeholder="Subject" required>
-                        </div>
-                        <div class="text-right">
-                          <button type="submit" class="btn btn-primary theme-button" data-toggle="modal"
-                            data-target="#exampleModal">Submit Now</button>
-                        </div>
-                      </form>
-                    </div>
+                    <img src="assets/images/bg.jpg" alt="P2W" />
                   </div>
                 </div>
               </div>
-              <!-- request a demo form popup -->
             </div>
           </div>
         </div>
@@ -252,39 +218,43 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
-              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt="" style="height:25px"/>
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" /></h3>
-                
-                <p> Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer
-                  virtual reality platform for creators.
-                  We are building a meta and virtual space where islanders(fans) can visit, connect with eachother and enjoy
-                  exclusive content and entertainment from different boats (creators) around the world.
-                  Our platform is free for our boat island members, others can connect by purchasing a token for access. </p>
-              </div>
-            </div>
-          </div>
-          <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
-            <div class="columns text-lg-left text-center">
-              <p>&copy; 2022 The Boat Island. All rights reserved | Designed by <a title='Potter Incorporated'
-                  href="https://potterincorporated.com/">Potter Inc&trade;</a>
+              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
+                  style="height:25px" />
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" />
+              </h3>
+
+              <p> Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer
+                virtual reality platform for creators.
+                We are building a meta and virtual space where islanders(fans) can visit, connect with eachother and
+                enjoy
+                exclusive content and entertainment from different boats (creators) around the world.
+                Our platform is free for our boat island members, others can connect by purchasing a token for access.
               </p>
-            </div>
-            <div class="columns-2 mt-lg-0 mt-3">
-              <ul class="social">
-                <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-                </li>
-                <li><a href="#linkedin"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
-                </li>
-                <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
-                </li>
-                <li><a href="#google"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
-                </li>
-                <li><a href="#github"><span class="fa fa-github" aria-hidden="true"></span></a>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
+        <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
+          <div class="columns text-lg-left text-center">
+            <p>&copy; 2022 The Boat Island. All rights reserved | Designed by <a title='Potter Incorporated'
+                href="https://potterincorporated.com/">Potter Inc&trade;</a>
+            </p>
+          </div>
+          <div class="columns-2 mt-lg-0 mt-3">
+            <ul class="social">
+              <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="#linkedin"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="#google"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="#github"><span class="fa fa-github" aria-hidden="true"></span></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
       </div>
 
       <!-- move top -->
@@ -498,6 +468,9 @@
 
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
+  <script>
+    $('#exampleModalCenter').modal('show')
+  </script>
 </body>
 
 </html>
