--- a/index.html
+++ b/index.html
@@ -98,57 +98,61 @@
           exclusive content and entertainment from different boats (creators) around the world.
           Our platform is free for our boat island members, others can connect by purchasing a token for access. </p>
       </div>
-      <div class="row bottom_grids text-center">
-        <div class="col-lg-4 col-md-6 mt-5">
-          <div class="s-block">
-            <a href="services.html" class="d-block">
-              <img src="assets/images/s1.png" alt="" class="img-fluid" />
-            </a>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mt-5">
-          <div class="s-block">
-            <a href="services.html" class="d-block">
-              <img src="assets/images/s2.png" alt="" class="img-fluid" />
-            </a>
-          </div>
-        </div>
-        <div class="col-lg-4 mt-5">
-          <div class="s-block">
-            <a href="services.html" class="d-block">
-              <img src="assets/images/s3.png" alt="" class="img-fluid" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- /index-block2 -->    <section class="w3l-about4" id="about">
-      <div class="new-block py-5">
-        <div class="container py-lg-5">
-          <div class="middle-section text-center">
-            <div class="header-section text-center mx-auto">
-              <h6 class="sub-title">Explore The Boat Island</h6>
-              <h3>Take a Tour Round the Island</h3>
-            </div>
-            <div class="history-info mt-5">
-              <div class="position-relative">
-                <img src="assets/images/bg.jpg" class="img-fluid img-curve video-popup-image" alt="video-popup">
-               
-                <a href="#small-dialog" class="popup-with-zoom-anim play-view text-center position-absolute">
-                  <span class="video-play-icon">
-                    <span class="fa fa-play"></span>
-                  </span>
-                </a>
-                <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
-                  <iframe src="https://www.youtube.com/embed/yRh7N-CluiM" allowfullscreen></iframe>
+      <!-- customers Section -->
+      <section class="w3l-customers pb-5">
+        <div class="container py-lg-3">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="owl-three owl-carousel owl-theme logo-view">
+                <div class="item">
+                  <img src="assets/images/logo1.jpg" alt="company-logo" class="img-fluid">
+                </div>
+                <div class="item">
+                  <img src="assets/images/logo2.jpg" alt="company-logo" class="img-fluid">
+
+                </div>
+                <div class="item">
+                  <img src="assets/images/logo3.jpg" alt="company-logo" class="img-fluid">
+
+                </div>
+                <div class="item">
+                  <img src="assets/images/logo4.jpg" alt="company-logo" class="img-fluid">
+
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </section>
+      <!-- //customers Section -->
+  </section>
+  <!-- /index-block2 -->
+  <section class="w3l-about4" id="about">
+    <div class="new-block py-5">
+      <div class="container py-lg-5">
+        <div class="middle-section text-center">
+          <div class="header-section text-center mx-auto">
+            <h6 class="sub-title">Explore The Boat Island</h6>
+            <h3>Take a Tour Round the Island</h3>
+          </div>
+          <div class="history-info mt-5">
+            <div class="position-relative">
+              <img src="assets/images/bg.jpg" class="img-fluid img-curve video-popup-image" alt="video-popup">
+
+              <a href="#small-dialog" class="popup-with-zoom-anim play-view text-center position-absolute">
+                <span class="video-play-icon">
+                  <span class="fa fa-play"></span>
+                </span>
+              </a>
+              <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+                <iframe src="https://www.youtube.com/embed/yRh7N-CluiM" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </section>
+    </div>
+  </section>
   <section class="w3l-index4">
     <div class="new-block top-bottom">
       <div class="container">
@@ -199,41 +203,54 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
-              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt="" style="height:25px"/>
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" /></h3>
-                
-                <p> Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer
-                  virtual reality platform for creators.
-                  We are building a meta and virtual space where islanders(fans) can visit, connect with eachother and enjoy
-                  exclusive content and entertainment from different boats (creators) around the world.
-                  Our platform is free for our boat island members, others can connect by purchasing a token for access. </p>
-              </div>
-            </div>
-          </div>
-          <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
-            <div class="columns text-lg-left text-center">
-              <p>&copy; 2022 The Boat Island. All rights reserved | Designed by <a title='Potter Incorporated'
-                  href="https://potterincorporated.com/">Potter Inc&trade;</a>
+              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
+                  style="height:25px" />
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" />
+              </h3>
+
+              <p> Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer
+                virtual reality platform for creators.
+                We are building a meta and virtual space where islanders(fans) can visit, connect with eachother and
+                enjoy
+                exclusive content and entertainment from different boats (creators) around the world.
+                Our platform is free for our boat island members, others can connect by purchasing a token for access.
               </p>
-            </div>
-            <div class="columns-2 mt-lg-0 mt-3">
-              <ul class="social">
-                <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-                </li>
-                <li><a href="#linkedin"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
-                </li>
-                <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
-                </li>
-                <li><a href="#google"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
-                </li>
-                <li><a href="#github"><span class="fa fa-github" aria-hidden="true"></span></a>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
+        <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
+          <div class="columns text-lg-left text-center">
+            <p>&copy; 2022 The Boat Island. All rights reserved | Designed by <a title='Potter Incorporated'
+                href="https://potterincorporated.com/">Potter Inc&trade;</a>
+            </p>
+          </div>
+          <div class="columns-2 mt-lg-0 mt-3">
+            <ul class="social">
+              <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="#linkedin"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="#google"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="#github"><span class="fa fa-github" aria-hidden="true"></span></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
       </div>
 
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <img src="assets/images/bg.jpg" alt="P2W" />
+          </div>
+        </div>
+      </div>
       <!-- move top -->
       <button onclick="topFunction()" id="movetop" title="Go to top">
         <span class="fa fa-angle-up"></span>
@@ -344,6 +361,7 @@
           }
         }
       })
+      // $('#exampleModalCenter').show()
     })
   </script>
   <!-- //customers owlcarousel -->
@@ -408,13 +426,6 @@
     });
   </script>
 
-  <!-- stats number counter-->
-  <script src="assets/js/jquery.waypoints.min.js"></script>
-  <script src="assets/js/jquery.countup.js"></script>
-  <script>
-    $('.counter').countUp();
-  </script>
-  <!-- //stats number counter -->
   <!--/MENU-JS-->
   <script>
     $(window).on("scroll", function () {
@@ -444,8 +455,18 @@
   </script>
   <!--//MENU-JS-->
 
+  <!-- POPOVER -->
+
+  <!-- //POPOVER -->
+
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
+
+  <script>
+    $(document).ready(function () {
+      $('#exampleModalCenter').modal('show');
+    })
+  </script>
 </body>
 
 </html>
