IMAGE Enhance Optimized picture quality for about page and landing page

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
           </div>
           <div class="cwp4-two row">
             <div class="cwp4-image col-lg-6 pl-lg-5 mt-lg-0 mt-5">
-              <img src="assets/images/about1.png" class="img-curve img-fluid" alt="" />
+              <img src="assets/images/about1.jpg" class="img-curve img-fluid" alt="" />
             </div>
             <div class="cwp4-text col-lg-6">
               <h3>What Is Boat Island VR (BIVR)</h3>
@@ -103,7 +103,7 @@
               </ul>
             </div>
             <div class="cwp4-image col-lg-6 pl-lg-5 mt-lg-0 mt-5">
-              <img src="assets/images/about2.png" class="img-curve img-fluid" alt="" />
+              <img src="assets/images/about2.jpg" class="img-curve img-fluid" alt="" />
             </div>
           </div>
         </div>
@@ -159,33 +159,6 @@
         </div>
       </div>
     </section>
-    <!-- customers Section -->
-    <!-- <section class="w3l-customers pb-5">
-      <div class="container py-lg-3">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="owl-three owl-carousel owl-theme logo-view">
-              <div class="item">
-                <img src="assets/images/logo1.jpg" alt="company-logo" class="img-fluid">
-              </div>
-              <div class="item">
-                <img src="assets/images/logo2.jpg" alt="company-logo" class="img-fluid">
-
-              </div>
-              <div class="item">
-                <img src="assets/images/logo3.jpg" alt="company-logo" class="img-fluid">
-
-              </div>
-              <div class="item">
-                <img src="assets/images/logo4.jpg" alt="company-logo" class="img-fluid">
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    <!-- //customers Section -->
   </main>
 
   <footer>
@@ -218,9 +191,9 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
-              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
+              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt="bivr"
                   style="height:25px" />
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" />
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="boat island" style="height: 25px" />
               </h3>
 
               <p> Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer
@@ -235,7 +208,7 @@
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
           <div class="columns text-lg-left text-center">
-            <p>&copy; 2022 The Boat Island. All rights reserved | Designed by <a title='Potter Incorporated'
+            <p title="Designed by Potter Inc&trade;">&copy; 2022 The Boat Island. All rights reserved
                 href="https://potterincorporated.com/">Potter Inc&trade;</a>
             </p>
           </div>
