--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="container py-md-3">
       <div class="header-section text-center mx-auto">
         <h6 class="sub-title text-capitalize">Join the Wave</h6>
-        <img src="assets/images/gl12.jpg" class="img-fluid" alt="">
+        <img src="assets/images/gl12.png" class="img-fluid" alt="">
         <p class="my-3"> Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer
           virtual reality platform for creators.
           We are building a meta and virtual space where islanders(fans) can visit, connect with eachother and enjoy
@@ -103,20 +103,32 @@
         <div class="container py-lg-3">
           <div class="row">
             <div class="col-md-12">
-              <div class="owl-three owl-carousel owl-theme logo-view">
+              <div class="owl-three owl-carousel owl-theme">
                 <div class="item">
-                  <img src="assets/images/logo1.jpg" alt="company-logo" class="img-fluid">
+                  <img src="assets/images/s1.jpg" alt="paintball arena" class="img-fluid">
                 </div>
                 <div class="item">
-                  <img src="assets/images/logo2.jpg" alt="company-logo" class="img-fluid">
+                  <img src="assets/images/s2.jpg" alt="boardgame room" class="img-fluid">
 
                 </div>
                 <div class="item">
-                  <img src="assets/images/logo3.jpg" alt="company-logo" class="img-fluid">
+                  <img src="assets/images/s3.jpg" alt="game lobby" class="img-fluid">
 
                 </div>
                 <div class="item">
-                  <img src="assets/images/logo4.jpg" alt="company-logo" class="img-fluid">
+                  <img src="assets/images/s4.jpg" alt="cruise boat" class="img-fluid">
+
+                </div>
+                <div class="item">
+                  <img src="assets/images/s5.jpg" alt="concert arena" class="img-fluid">
+
+                </div>
+                <div class="item">
+                  <img src="assets/images/s6.jpg" alt="club house" class="img-fluid">
+
+                </div>
+                <div class="item">
+                  <img src="assets/images/s7.jpg" alt="game menu" class="img-fluid">
 
                 </div>
               </div>
@@ -205,7 +217,7 @@
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
               <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                   style="height:25px" />
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" />
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px"/>
               </h3>
 
               <p> Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer
@@ -220,8 +232,7 @@
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
           <div class="columns text-lg-left text-center">
-            <p>&copy; 2022 The Boat Island. All rights reserved | Designed by <a title='Potter Incorporated'
-                href="https://potterincorporated.com/">Potter Inc&trade;</a>
+            <p title="Designed by Potter Inc&trade;">&copy; 2022 The Boat Island. All rights reserved
             </p>
           </div>
           <div class="columns-2 mt-lg-0 mt-3">
