--- a/about.html
+++ b/about.html
@@ -36,13 +36,16 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item @@services-active">
+              <a class="nav-link" href="services.html">Careers</a>
+            </li>
+            <li class="nav-item @@services-active">
               <a class="nav-link" href="services.html">Events</a>
             </li>
-            <li class="nav-item @@contact-active">
-              <a class="nav-link" href="contact.html">Support</a>
-            </li>
             <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-              <a class="btn btn-outline-primary theme-button" href="contact.html">Purchase Ticket</a>
+              <a class="btn btn-outline-primary theme-button" href="support.html">Download Now</a>
+            </li>
+            <li class="nav-item @@contact-active">
+              <a class="nav-link" href="support.html">Support</a>
             </li>
           </ul>
         </div>
@@ -70,12 +73,12 @@
             </div>
             <div class="cwp4-text col-lg-6">
               <h3>What Is Boat Island VR (BIVR)</h3>
-              <p>Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer
+              <p> Boat Island VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
                 virtual reality platform for creators.
-                We are building a meta and virtual space where islanders(fans) can visit, connect with eachother and
+                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
                 enjoy
-                exclusive content and entertainment from different boats (creators) around the world.
-                Our platform is free for our boat island members, others can connect by purchasing a token for access.
+                exclusive content and entertainment from different BOATS (creators) around the world.
+                Our platform is free for our BOAT ISLAND members, others can connect by purchasing a token for access.
               </p>
             </div>
           </div>
@@ -142,7 +145,7 @@
             <div class="mt-5 request-quote">
               <!-- request a demo form popup -->
               <a type="button" class="btn btn-primary theme-button">
-                Purchase Ticket
+                Download Now
               </a>
 
               <!-- Modal -->
@@ -151,6 +154,9 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                   <div class="modal-content">
                     <img src="assets/images/bg.jpg" alt="P2W" />
+                    <a href="about.html" class="btn btn-light theme-button" 
+                    style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
+                    color: #fff; background: #ab07d4; border: none;">Download Now</a>
                   </div>
                 </div>
               </div>
@@ -164,7 +170,7 @@
   <footer>
     <!-- footer -->
     <section class="w3l-footer">
-      <div class="w3l-footer-16-main py-5">
+      <div class="w3l-footer-16-main py-5" style="background-color: #242464 !important">
         <div class="container">
           <div class="row">
             <div class="col-lg-6 column">
@@ -191,25 +197,24 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
-              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt="bivr"
+              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                   style="height:25px" />
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="boat island" style="height: 25px" />
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px"/>
               </h3>
 
-              <p> Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer
+              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
                 virtual reality platform for creators.
-                We are building a meta and virtual space where islanders(fans) can visit, connect with eachother and
+                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
                 enjoy
-                exclusive content and entertainment from different boats (creators) around the world.
-                Our platform is free for our boat island members, others can connect by purchasing a token for access.
+                exclusive content and entertainment from different BOATS (creators) around the world.
+                Our platform is free for our BOAT ISLAND members, others can connect by purchasing a token for access.
               </p>
             </div>
           </div>
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
           <div class="columns text-lg-left text-center">
-            <p title="Designed by Potter Inc&trade;">&copy; 2022 The Boat Island. All rights reserved
-                href="https://potterincorporated.com/">Potter Inc&trade;</a>
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights reserved
             </p>
           </div>
           <div class="columns-2 mt-lg-0 mt-3">
@@ -230,7 +235,20 @@
       </div>
       </div>
 
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <img src="assets/images/bg.jpg" alt="P2W" />
+            <a href="about.html" class="btn btn-light theme-button" 
+            style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
+            color: #fff; background: #ab07d4; border: none;">Download Now</a>
+          </div>
+        </div>
+      </div>
       <!-- move top -->
+
       <button onclick="topFunction()" id="movetop" title="Go to top">
         <span class="fa fa-angle-up"></span>
       </button>
