--- a/support.html
+++ b/support.html
@@ -65,7 +65,7 @@
   <!-- contact breadcrumbs -->
   <nav id="breadcrumbs" class="breadcrumbs">
     <div class="container page-wrapper">
-      <a href="index.html">Home</a> » <span class="breadcrumb_last" aria-current="page">Contact</span>
+      <a href="index.html">Home</a> » <span class="breadcrumb_last" aria-current="page">Support</span>
     </div>
   </nav>
   <!-- /contact breadcrumbs -->
